--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@
 	text-align: center;
 }
 
-.videolist, .queuelist {
+ul.videolist, ul.queuelist {
 	padding: 0;
 	margin: 0;
 	list-style: none;
@@ -85,10 +85,10 @@
 }
 
 
-.result {
+li.result {
 	width: 320px;
-	float: left;
 	padding: 4px 0;
+	margin: 0px;
 	border-bottom: solid 1px #eee;
 }
 
@@ -101,7 +101,7 @@
 	background: #3B5998;
 	color: #fff;
 	font-size: 0.8em;
-	margin: 1px 0 0 4px;
+	margin: 1px 4px 0 0px;
 	text-decoration: none;
 }	
 
@@ -122,7 +122,6 @@
 	display: none;
 }
 .result .loadto {
-	float: right;
 	text-transform: uppercase;
 }
 
