--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+.deck .btns a, .fader {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 .rack {
 	width: 320px;
 	padding: 0 0 30px 0;
@@ -44,8 +51,8 @@
 }
 
 .deck .btns a {
-	width: 60px;
-	height: 15px;
+	width: 82px;
+	height: 65px;
 	padding: 25px 11px;
 	background: #3B5998;
 	color: #fff;
@@ -64,9 +71,9 @@ ul.videolist, ul.queuelist {
 }
 
 .fader {
-	height: 61px; 
+	height: 65px; 
 	padding: 2px 5px;
-	width: 28px;
+	width: 38px;
 	margin: 5px 0 0 0;
 	float: right;
 	background: #eee;
