--- a/css/style.css
+++ b/css/style.css
@@ -48,12 +48,25 @@
 	cursor: pointer;
 }
 
+.deck .player-holder {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	height: 0;
+	overflow: hidden;
+	min-width: 280px;
+}
+
 .deck .player {
-	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .deck .btns a {
-	width: 82px;
+	width: 75px;
 	height: 65px;
 	padding: 25px 11px;
 	background: #3B5998;
