Change the cursor for all h2's

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@
 	font-weight: bold;
 	display: inline-block;
 	text-transform: uppercase;
-	cursor: pointer;
+	cursor: default;
 }
 
 .deck .player-holder {
